--- a/ui/styles/index.css
+++ b/ui/styles/index.css
@@ -1,12 +1,13 @@
 :root {
   --color-linework: #e2e2e2;
+  --color-bg: #fbfbfb;
   --spacing: 0.2rem;
 }
 
 html {
   font-size: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -20,4 +21,8 @@ body {
 
 svg {
   font: 10px system-ui, sans-serif;
+}
+
+.viz {
+  grid-area: viz;
 }
