--- a/ui/components/Viewer.module.css
+++ b/ui/components/Viewer.module.css
@@ -21,3 +21,29 @@
 .viewer > :last-child {
   grid-area: program;
 }
+
+.viewer__viz {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.viewer__viz-container {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.viewer__link {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: inherit;
+  border-top: 1px solid var(--color-linework);
+  text-decoration-color: var(--color-link);
+  text-decoration-thickness: 0.3rem;
+  font-size: 2rem;
+  padding: calc(10 * var(--spacing));
+}
