--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -1,3 +1,25 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  .stack-sm > * + * {
+    @apply mt-4;
+  }
+
+  .stack-md > * + * {
+    @apply mt-8;
+  }
+
+  .stack-lg > * + * {
+    @apply mt-16;
+  }
+
+  .stack-xl > * + * {
+    @apply mt-20;
+  }
+}
+
 :root {
   --color-linework: #e2e2e2;
   --color-bg: #fbfbfb;
@@ -11,17 +33,6 @@
 
 html {
   font-size: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-body {
-  margin: 0;
-  position: absolute;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 svg {
