--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -20,11 +20,25 @@
   }
 }
 
-:root {
-  --color-linework: #e2e2e2;
-  --color-bg: #fbfbfb;
-  --color-link: #e7131a;
-  --spacing: 0.2rem;
+@layer components {
+  .viewer-grid {
+    grid-template-areas:
+      "viz spec"
+      "viz program";
+    grid-template-colums: minmax(40rem, 1fr) minmax(20rem, 50rem);
+  }
+
+  .viewer-grid :first-child {
+    grid-area: viz;
+  }
+
+  .viewer-grid :nth-child(2) {
+    grid-area: spec;
+  }
+
+  .viewer-grid :last-child {
+    grid-area: program;
+  }
 }
 
 * {
@@ -37,10 +51,6 @@ html {
 
 svg {
   font: 10px system-ui, sans-serif;
-}
-
-.viz {
-  grid-area: viz;
 }
 
 .no-fouc {
