--- a/extension/src/index.css
+++ b/extension/src/index.css
@@ -1,3 +1,59 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  /* Block Stack */
+  .stack {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .stack > * {
+    margin-block: 0;
+  }
+
+  .stack-xs > * + * {
+    margin-block-start: 0.5rem;
+  }
+
+  .stack-sm > * + * {
+    margin-block-start: 1rem;
+  }
+
+  .stack-md > * + * {
+    margin-block-start: 1.5rem;
+  }
+
+  .stack-lg > * + * {
+    margin-block-start: 2rem;
+  }
+
+  /* Inline Stack */
+  .stack-h {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .stack-h > * {
+    margin-inline: 0;
+  }
+
+  .stack-h-xs > * + * {
+    margin-inline-start: 0.5rem;
+  }
+
+  .stack-h-sm > * + * {
+    margin-inline-start: 1rem;
+  }
+
+  .stack-h-md > * + * {
+    margin-inline-start: 1.5rem;
+  }
+
+  .stack-h-lg > * + * {
+    margin-inline-start: 2rem;
+  }
+}
