--- a/extension/src/index.css
+++ b/extension/src/index.css
@@ -7,6 +7,12 @@
   @apply h-full;
 }
 
+/* File Input */
+input[type="file"],
+input[type="file"]::-webkit-file-upload-button {
+  @apply cursor-pointer;
+}
+
 @layer utilities {
   /* Block Stack */
   .stack {
@@ -77,5 +83,19 @@
 
   .tab-content[data-state="inactive"] {
     @apply hidden;
+  }
+
+  .data-grid tr::before {
+    @apply absolute left-0 top-0 w-full border-b border-slate-400;
+    content: "";
+  }
+
+  .data-grid tr::after {
+    @apply absolute bottom-0 left-0 w-full border-t border-slate-400;
+    content: "";
+  }
+
+  .data-grid tr:first-child td {
+    @apply border-t-0;
   }
 }
