fix: add referenced stack-sm class to CSS in packages/examples

--- a/packages/examples/app/index.css
+++ b/packages/examples/app/index.css
@@ -21,6 +21,10 @@
     @apply flex flex-col justify-start;
   }
 
+  .stack-sm > * + * {
+    @apply mt-4;
+  }
+
   .stack-base > * + * {
     @apply mt-8;
   }
